<resources>
    <string name="app_name">MeLi</string>
    <string name="facebook_app_id">458260084678984</string>
    <string name="fb_login_protocol_scheme">fb458260084678984</string>
    <string name="cancel_login">Se canceló la operación</string>
    <string name="error_login">Ocurrió un error al ingresar</string>
    <string name="logout">Cerrar sesión</string>
    <string name="bienvenida">¡Bienvenido a MeLi!</string>
    <string name="email">E-mail</string>
    <string name="contraseña">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarme_email">Registrarme con mi e-mail</string>
    <string name="completar_datos">Completá tus datos</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="registrarme">Registrarme</string>
    <string name="com_martinb_meli">com.martinb.meli</string>
    <string name="account_type">com.martinb.meli</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="meli">MeLi</string>
    <string name="title_activity_home2">HomeActivity2</string>
    <string name="action_settings">Settings</string>
    <string name="product">imagen del producto</string>
    <string name="user">Usuario</string>
    <string name="account">Mi cuenta</string>
    <string name="sell">Vender gratis</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <string name="producto">Producto</string>
    <string name="descirption">Descripcion</string>
    <string name="categoria">Categoria</string>
    <string name="cantidad">Cantidad:</string>
    <string name="info_seller">Información del vendedor</string>
    <string name="ubication_seller">Ubicación</string>
    <string name="opinions">Opiniones sobre este producto</string>
    <string name="agregarFoto">Agregar foto</string>
    <string name="nombre_producto">Nombre</string>
    <string name="price">Precio</string>
    <string name="price_sign">$</string>
    <string name="units">Unidades disponibles</string>
    <string name="credit_card">Tarjeta de crédito</string>
    <string name="debit_card">Tarjeta de débito</string>
    <string name="cash">Efectivo</string>
    <string name="publish">Publicar</string>
    <string name="payment_methods">Medios de pago</string>
    <string name="ubication_title">Ubicación</string>
    <string name="micuenta">Mi cuenta</string>
    <string name="myshppings">Compras</string>
    <string name="shopping_title">Compras</string>
    <string name="myshoppings">Mis compras</string>
    <string name="sell_title">Ventas</string>
    <string name="my_sells">Mis ventas</string>
    <string name="data">Datos</string>
    <string name="my_data">Mis datos</string>
    <string name="profile">Perfil</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="phone">Telefono</string>
    <string name="display_name">Nombre y apellido</string>
    <string name="shipping_method_title">¿Cómo querés recibir el producto?</string>
    <string name="shipping_method_home">Enviar a mi domicilio</string>
    <string name="shipping_method_local">Retiro en local</string>
    <string name="delivery_home_title">Ingresa la dirección de envío</string>
    <string name="continue_title">Continuar</string>
    <string name="payment_methods_purchase">¿Cómo querés pagar?</string>
    <string name="card_payment_title">Ingresa los datos de tu tarjeta</string>
    <string name="card_numbre">Número de la tarjeta</string>
    <string name="expiration_month">Mes de vencimiento</string>
    <string name="expiration_year">Año de vencimiento</string>
    <string name="card_holder_title">Nombre y apellido del titular</string>
    <string name="expiration_date">Fecha de vencimiento</string>
    <string name="expiration_date_format">MM/AA</string>
    <string name="card_cvc">Código de seguridad</string>
    <string name="purchase_resume">Resumen de su compra</string>
    <string name="units_title">Cantidad</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Envío</string>
    <string name="total">Total</string>
    <string name="buy">Comprar</string>
    <string name="ask">Preguntar</string>
    <string name="ask_question">Escribe tu pregunta</string>
    <string name="questions">Preguntas</string>
    <string name="editProfile">Editar perfil</string>
    <string name="send">Send</string>
    <string name="save">save</string>
    <string name="questions_button">Preguntas  ></string>
    <string name="answer">Responder</string>
    <string name="ask_answer">Escribe tu respuesta</string>
    <string name="chat">Chat</string>
    <string name="write_message">Escribe un mensaje</string>
    <string name="send_message"><![CDATA[Enviar mensage  >]]></string>
    <string name="delivery_cost">Costo del envío:</string>
    <string name="search_product">Buscar producto por:</string>
    <string name="name">Nombre</string>
    <string name="search">Buscar</string>
    <string name="search_results">Resultados de la busqueda</string>
</resources>
