<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purchase_background"
    tools:context=".activity.purchase.PurchaseShippingMethodsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purchase_background"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title=" " />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/shipping_method_title"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar6" />

    <Button
        android:id="@+id/shipping_method_home"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/button_light_blue"
        android:onClick="shipping_home"
        android:text="@string/shipping_method_home"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/shipping_method_local"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/button_light_blue"
        android:onClick="shipping_local"
        android:text="@string/shipping_method_local"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipping_method_home" />

</android.support.constraint.ConstraintLayout>